Premier ebauche de zoneTransit

--- a/src/app/c++/CMakeLists.txt
+++ b/src/app/c++/CMakeLists.txt
@@ -16,6 +16,9 @@ IF(Boost_FOUND)
 
   ADD_LIBRARY(yay SHARED yay.cpp)
   TARGET_LINK_LIBRARIES(yay ${Boost_LIBRARIES})
+
+	ADD_LIBRARY(ZoneTransit SHARED ZoneTransit.cpp)
+  TARGET_LINK_LIBRARIES(ZoneTransit ${Boost_LIBRARIES})
 ELSEIF(NOT Boost_FOUND)
   MESSAGE(FATAL_ERROR "Unable to find correct Boost version. Did you set BOOST_ROOT?")
 ENDIF()
@@ -25,3 +28,15 @@ IF(CMAKE_COMPILER_IS_GNUCXX)
 ELSE()
   MESSAGE(FATAL_ERROR "CMakeLists.txt has not been tested/written for your compiler.")
 ENDIF()
+
+include(CheckCXXCompilerFlag)
+CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
+CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
+if(COMPILER_SUPPORTS_CXX11)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+elseif(COMPILER_SUPPORTS_CXX0X)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+else()
+    message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
+endif()
+
