--- a/src/app/c++/CMakeLists.txt
+++ b/src/app/c++/CMakeLists.txt
@@ -6,6 +6,16 @@ IF(NOT CMAKE_BUILD_TYPE)
   #SET(CMAKE_BUILD_TYPE "MINSIZEREL")
 ENDIF()
 
+set(STLPORT_INCLUDE_DIRS /usr/local/include/stlport)
+
+FIND_PACKAGE(stlport)
+IF(STLport_FOUND)
+  INCLUDE_DIRECTORIES("${STLport_INCLUDE_DIRS}")
+  SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lstlport")
+ELSE()
+  MESSAGE(FATAL_ERROR "STL not installed, download it here : http://sourceforge.net/projects/stlport/")
+ENDIF()
+
 FIND_PACKAGE(Boost 1.45.0)
 IF(Boost_FOUND)
   INCLUDE_DIRECTORIES("${Boost_INCLUDE_DIRS}" "/usr/include/python2.7")
@@ -14,10 +24,10 @@ IF(Boost_FOUND)
   SET(Boost_USE_STATIC_RUNTIME OFF)
   FIND_PACKAGE(Boost 1.45.0 COMPONENTS python)
 
-  ADD_LIBRARY(yay SHARED yay.cpp)
+  ADD_LIBRARY(yay SHARED yay.cxx)
   TARGET_LINK_LIBRARIES(yay ${Boost_LIBRARIES})
 
-	ADD_LIBRARY(ZoneTransit SHARED ZoneTransit.cpp)
+  ADD_LIBRARY(ZoneTransit SHARED ZoneTransit.cxx)
   TARGET_LINK_LIBRARIES(ZoneTransit ${Boost_LIBRARIES})
 ELSEIF(NOT Boost_FOUND)
   MESSAGE(FATAL_ERROR "Unable to find correct Boost version. Did you set BOOST_ROOT?")
