Quoted configs value with ConfigObj
Using ConfigObj allows using quoting for uniformity.
Plus, the config behaves like a dict(dict()), which feel pretty
'pythonic' to me.

--- a/bin/cide.conf.example
+++ b/bin/cide.conf.example
@@ -1,5 +1,5 @@
 [DEFAULT]
-server = ./configs/server.conf
-welcomeController = ./configs/welcomeController.conf
-ideController = ./configs/ideController.conf
+server = './configs/server.conf'
+welcomeController = './configs/welcomeController.conf'
+ideController = './configs/ideController.conf'
 
