Use generate_configs.sh to auto-fill config
Usage: scripts/generate_configs.sh /path/to/cide.py

Typo correction

--- a/bin/configs/dummy_controller.conf.example
+++ b/bin/configs/dummy_controller.conf.example
@@ -1,7 +1,8 @@
 # DUMMY CONF FILE. MAY BE USED AS COPYPASTA TEMPLATE
 [DEFAULT]
 # -- Variable path and elements to set --
-SRC = "/srv/www/cide.py/src"
+PRJ = "<<PRJ>>"
+SRC = %(PRJ)s + "/src"
 
 # -- Static content config --
 # Set root (/) of static dir/file to src
