Implementation de base de la zone de transit et des classes associees

--- a/src/app/c++/CMakeLists.txt
+++ b/src/app/c++/CMakeLists.txt
@@ -6,15 +6,15 @@ IF(NOT CMAKE_BUILD_TYPE)
   #SET(CMAKE_BUILD_TYPE "MINSIZEREL")
 ENDIF()
 
-set(STLPORT_INCLUDE_DIRS /usr/local/include/stlport)
+#set(STLPORT_INCLUDE_DIRS /usr/local/include/stlport)
 
-FIND_PACKAGE(stlport)
-IF(STLport_FOUND)
-  INCLUDE_DIRECTORIES("${STLport_INCLUDE_DIRS}")
-  SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lstlport")
-ELSE()
-  MESSAGE(FATAL_ERROR "STL not installed, download it here : http://sourceforge.net/projects/stlport/")
-ENDIF()
+#FIND_PACKAGE(stlport)
+#IF(STLport_FOUND)
+#  INCLUDE_DIRECTORIES("${STLport_INCLUDE_DIRS}")
+#  SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lstlport")
+#ELSE()
+#  MESSAGE(FATAL_ERROR "STL not installed, download it here : http://sourceforge.net/projects/stlport/")
+#ENDIF()
 
 FIND_PACKAGE(Boost 1.45.0)
 IF(Boost_FOUND)
