--- a/bin/configs/server.conf.example
+++ b/bin/configs/server.conf.example
@@ -4,7 +4,7 @@ server.socket_host='0.0.0.0'
 server.socket_port=8080
 server.thread_pool=20
 tools.sessions.on=True
-tools.sessions.lock='explicit'
+#tools.sessions.lock='explicit'  # We'll see later...
 ssl_certificate=None
 ssl_private_key=None
 log.screen=True
