--- a/bin/cide.conf.example
+++ b/bin/cide.conf.example
@@ -2,5 +2,5 @@
 server = '<<PRJ>>/bin/configs/server.conf'
 welcomeController = '<<PRJ>>/bin/configs/welcomeController.conf'
 ideController = '<<PRJ>>/bin/configs/ideController.conf'
+authController = '<<PRJ>>/bin/configs/authController.conf'
 log_file = '<<PRJ>>/logs/cide.log'
-
