Chat App Module

--- a/bin/cide.conf.example
+++ b/bin/cide.conf.example
@@ -2,5 +2,6 @@
 server = '<<PRJ>>/bin/configs/server.conf'
 welcomeController = '<<PRJ>>/bin/configs/welcomeController.conf'
 ideController = '<<PRJ>>/bin/configs/ideController.conf'
+chatController = '<<PRJ>>/bin/configs/chatController.conf'
 log_file = '<<PRJ>>/logs/cide.log'
 
