--- a/bin/configs/server.conf.example
+++ b/bin/configs/server.conf.example
@@ -4,6 +4,7 @@ server.socket_host='0.0.0.0'
 server.socket_port=8080
 server.thread_pool=20
 tools.sessions.on=True
+tools.sessions.clean_freq=2
 #tools.sessions.lock='explicit'  # We'll see later...
 tools.auth.on=True
 ssl_certificate=None
