--- a/bin/configs/server.conf.example
+++ b/bin/configs/server.conf.example
@@ -4,7 +4,7 @@ server.socket_host='0.0.0.0'
 server.socket_port=8080
 server.thread_pool=20
 tools.sessions.on=True
-tools.sessions.clean_freq=2
+tools.sessions.clean_freq=2  # Cleans expired sessions every 2 minutes
 #tools.sessions.lock='explicit'  # We'll see later...
 tools.auth.on=True
 ssl_certificate=None
