--- a/bin/project.prj.example
+++ b/bin/project.prj.example
@@ -4,6 +4,7 @@ project_base_dir = "<<PRJ_BASE_DIR>>"
 project_code_dir = "<<PRJ_BASE_DIR>>/code"
 project_exec_dir = "<<PRJ_BASE_DIR>>/exec"
 project_backup_dir = "<<PRJ_BASE_DIR>>/backup"
+project_tmp_dir = "<<PRJ_BASE_DIR>>/tmp"
 
 [CoreAppRealtime]
 cycle_time = 1000000         # in microseconds
